# clipmine-ai

./: .env.example  .gitignore  AGENT.md  DEPLOYMENT.md  LOCK.md  PLAN.md  README.md  SUBMISSION.md  VERIFICATION_LOG.md  package-lock.json  package.json  playwright.config.ts  render.yaml
.github/workflows/: ci.yml  readme-assets.yml
apps/web/: next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: home-shell.tsx  results-workspace.tsx  upload-panel.tsx
apps/web/src/lib/: api.test.ts  api.ts  batch-focus.test.ts  batch-focus.ts  batch-queue-guidance.test.ts  batch-queue-guidance.ts  batch-sessions.test.ts  (+13 more)
backend/: Dockerfile  pyproject.toml
backend/src/clipmine_api/: api.py  artifact_store.py  config.py  errors.py  main.py  media.py  multimodal.py  package_export.py  pipeline_types.py  precision.py  presentation.py  processor.py  schemas.py  scoring.py  segmentation.py  storage.py  text_heuristics.py  transcription.py
backend/src/clipmine_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_api_shapes.py  test_cors.py  test_health.py  test_jobs_api.py  test_multimodal.py  test_package_export.py  test_precision.py  test_processor.py  test_scoring.py  test_segmentation.py  test_storage.py
desktop/: main.mjs  preload.cjs
desktop/build-resources/: icon.icns
desktop/runtime/: launcher.mjs
scripts/: benchmark-large-uploads.mjs  build-desktop.mjs  dist-desktop.mjs  generate-readme-assets.mjs  start-app.mjs
tests/e2e/: app.spec.ts  fixtures.ts  live-api.spec.ts
(+42 files in other folders)
