[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipmine-api"
version = "0.1.0"
description = "FastAPI backend for ClipMine AI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.117.1,<1",
  "uvicorn[standard]>=0.35.0,<1",
  "python-multipart>=0.0.20,<1",
  "pydantic-settings>=2.10.1,<3",
  "orjson>=3.10.18,<4",
  "numpy>=2.3.2,<3",
  "boto3>=1.39.0,<2",
  "av>=17.0.0,<18",
  "imageio-ffmpeg>=0.6.0,<1",
  "faster-whisper>=1.2.1,<2"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1",
  "pytest>=8.4.1,<9"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
